# ai-adapter

./: .env  Cargo.toml  Dockerfile  README.md  example.env
src/: apidoc.rs  config.rs  main.rs  utils.rs
src/handlers/: mod.rs  text.rs  wacraft.rs
src/models/: ai.rs  common.rs  mod.rs  wacraft.rs  waha.rs
src/routes/: mod.rs  wacraft.rs  waha.rs
src/services/: ai.rs  mod.rs  wacraft.rs  waha.rs
src/synch/: mod.rs  mutex_swapper.rs
